Update LensesProcessorTest.java